# rust-ml-sandbox

./: .gitignore  Cargo.toml  Dockerfile  NOTICE.md  README.md  compose.yaml
.devcontainer/: devcontainer.json
examples/: hello_world.rs  hub.rs  hub_async.rs  linear.rs  linear_nn.rs  mnist.rs  text_classification.rs  text_embeddings.rs  text_generation.rs  text_summarization.rs
src/: logging.rs  main.rs
