[package]
name = "rust-ml-sandbox"
version = "0.1.0"
edition = "2021"
authors = ["Mochineko <t.o.e.4315@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
tokio = "1.29.1"
candle-core = { git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }
